# tsprediction

./: .coverage  .gitignore  .pylintrc  Makefile  README.md  predict_stock.py  pyproject.toml  requirements.txt
.spyproject/config/: workspace.ini
.spyproject/config/backups/: workspace.ini.bak
chashi_exercises/: fib.py
chashi_exercises/class works and homeworks/: fib.py  rem_white_space.py
chashi_exercises/general/pyrotch-in-60-minutes/: tensor.py
datasets/: raw_data_extractor.py
documentation/source/: conf.py  index.rst  modules.rst
figures/: plot_data.py  prediction_custom_Fri_Apr_23_16:42:14_2021.csv  prediction_custom_Fri_Apr_23_16_43_51_2021.csv
lstm_ts_example/: alpha_vantage_raw_data_extractor.py  lstm_tc_sample.py
misc/: lstm_tc_1.py
misc/chashi_exercises/: fib.py
misc/chashi_exercises/class works and homeworks/: armstrong.py  reverse_string.py
misc/chashi_exercises/time-series-prediction/: airline-time-series.py  rnn_basic.py
misc/lstm_ts_example/: trade_20141122.csv
misc/lstm_ts_example/.spyproject/: workspace.ini
models/: norm_model.mod  test1  test2  test_norm.mod  train_norm.mod
tests/: .coverage  test_dataloader.py  test_normalize_data.py  test_predict_model.py  test_raw_data_extractor.py  test_raw_data_extractor_pytest.py  test_train_model.py
tsprediction/: aapl.csv  apple_stock.csv  dataloader.py  lstm_class.py  microsoft.csv  normalize_data.py  predict_model.py  raw_data_extractor.py  temp.py  train_model.py  tsdatasets.py  tsprediction.py
tsprediction/data/: aapl.csv  ap.csv  num.csv
(+2 files in other folders)
