[tool.poetry]
name = "tsprediction"
version = "0.1.0"
description = "A seq2seq model for predicting stock value"
authors = ["None"]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.2.3"
docopt = "^0.6.2"
alpha-vantage = "^2.3.1"
matplotlib = "^3.3.4"
torch = "^1.8.0"
torchaudio = "^0.8.0"
torchvision = "^0.9.0"
sklearn = "^0.0"
pytest = "^6.2.3"
pylint = "^2.7.4"

[tool.poetry.dev-dependencies]
pytest = "^6.2.2"
Sphinx = "^3.5.3"
sphinx-rtd-theme = "^0.5.1"
coverage = "^5.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
